[package]
name = "spielrs_diff"
description= "It is a library which compare two tree direcories asynchronously"
version = "0.1.0"
documentation = "https://docs.rs/crate/spielrs_diff/0.1.0"
authors = ["Francisco Jesus Navarro Cortes <spiers@icloud.com>"]
readme = "README.md"
repository = "https://github.com/spielrs/spielrs-diff"
edition = "2018"
license= "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio= {version="0.2", features=["fs", "macros", "rt-threaded", "stream"]}
futures = "0.3"
async-trait= "0.1"